--- a/Home POD/config/settings_data.json
+++ b/Home POD/config/settings_data.json
@@ -1,6 +1,6 @@
 {
   "current": {
-    "purchase_code": "kalles-5",
+    "purchase_code": "",
     "color_scheme_body": "scheme-1",
     "color_focus": "#56cfe1",
     "color_scheme_dialog": "scheme-1",
