--- a/Home Blanket Pillow/config/settings_data.json
+++ b/Home Blanket Pillow/config/settings_data.json
@@ -2,9 +2,9 @@
   "current": {
     "purchase_code": "",
     "color_scheme_body": "scheme-1",
-    "color_focus": "#56cfe1",
+    "color_focus": "#6e8756",
     "color_scheme_dialog": "scheme-1",
-    "badge_sale": "#ff4e00",
+    "badge_sale": "#f8a802",
     "badge_new": "#56cfe1",
     "badge_soldout": "#999999",
     "badge_preorder": "#0774d7",
@@ -14,17 +14,19 @@
     "font_family_shopify_1": "poppins_n4",
     "font_family_shopify_2": "poppins_n4",
     "font_family_shopify_3": "libre_baskerville_n4",
-    "embed_google_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&amp;family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">",
+    "embed_google_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">",
     "rules_google_font": "",
     "font_family_1": "\"Poppins\", sans-serif;",
     "font_family_2": "\"Poppins\", sans-serif;",
-    "font_family_3": "\"Libre Baskerville\", serif;",
+    "font_family_3": "\"Poppins\", sans-serif;",
+    "font_family_4": "\"Poppins\", sans-serif;",
+    "font_family_5": "\"Poppins\", sans-serif;",
     "font_custom_heading": "--f_family_1",
     "hd_fweight": 500,
     "heading_scale": 100,
     "heading_lh": 1.4,
     "heading_spacing": 0,
-    "font_custom_sheading": "--f_family_1",
+    "font_custom_sheading": "--f_family_3",
     "font_base": "--f_family_1",
     "body_lh": 1.7,
     "body_spacing": 0,
@@ -32,8 +34,7 @@
     "h0_size_mb": 32,
     "h1_size": 54,
     "h2_size": 42,
-    "h3_size": 36,
-    "h3_size_mb": 26,
+    "h3_size": 34,
     "h4_size": 28,
     "h5_size": 24,
     "h5_size_mb": 18,
@@ -41,14 +42,14 @@
     "h6_size_mb": 14,
     "thickness_btn": 2,
     "padding_btn_1": 15,
-    "min_width_dt_btn_1": 160,
+    "min_width_dt_btn_1": 180,
     "min_width_btn_1": 160,
-    "min_height_btn_1": 25,
-    "page_width": 1440,
+    "min_height_btn_1": 31,
+    "page_width": 1410,
     "spacing_sections": 0,
     "spacing_grid_horizontal": 30,
     "spacing_grid_vertical": 30,
-    "button_radius": 0,
+    "button_radius": 30,
     "input_radius": 30,
     "block_radius": 0,
     "pr_card_radius": 0,
@@ -56,7 +57,7 @@
     "collection_card_radius": 0,
     "blog_card_radius": 0,
     "price_varies_style": "1",
-    "badge_shape": "round",
+    "badge_shape": "rectangle",
     "label_onsale_style": "percentage",
     "use_new_badge": false,
     "wis_atc_added": "2",
@@ -70,7 +71,7 @@
     "show_rating": false,
     "pr_title_size": "lg",
     "pr_title_weight": "medium",
-    "pr_price_weight": "medium",
+    "pr_price_weight": "normal",
     "color_mode": "color",
     "color_type": "all",
     "image_source": "custom_img",
@@ -89,10 +90,9 @@
     "pick_mode": "first_available",
     "hide_sold_out": false,
     "empty_cart_link": "shopify:\/\/collections",
-    "free_ship_pr": "beats-solo3-wireless",
-    "free_ship_pr_fast": "elise-top-handle-bag",
-    "free_ship_pr_express": "scooter-helmet",
-    "gift_wrap_pr": "gift-card",
+    "free_ship_pr": "",
+    "enable_confetti": false,
+    "gift_wrap_pr": "gift-wrap",
     "animations_reveal_on_scroll": true,
     "social_facebook_link": "https:\/\/facebook.com\/shopify",
     "social_x_link": "https:\/\/x.com\/shopify",
@@ -108,11 +108,11 @@
     "predictive_search_show_price": true,
     "search_fullwidth": false,
     "products_suggest": [
-      "anti-theft-vm-fingerprint-u-lock-d-lock",
-      "bicycle-saddle-bag",
-      "s4-electric-scooter-2",
-      "scooter-chain-lock",
-      "scooter-light-set"
+      "beautyrest-100-cotton-blanket",
+      "berkshire-blanket-waffle",
+      "berkshire-blanket-waffle-1",
+      "cotton-weave-diamond-blanket",
+      "gel-memory-foam-pillow"
     ],
     "currency_type": "1",
     "currency_code_enabled": false,
@@ -124,7 +124,7 @@
       "scheme-1": {
         "settings": {
           "text": "#222222",
-          "text2": "#878787",
+          "text2": "#696969",
           "background": "#ffffff",
           "background_gradient": "",
           "background2": "#f2f2f2",
@@ -132,12 +132,12 @@
           "button_label": "#ffffff",
           "button_border": "#222222",
           "secondary_button_label": "#222222",
-          "accent_color": "#f85712",
+          "accent_color": "#6e8756",
           "line_border": "#dddddd",
           "overlay": "#000000",
           "pr_text": "#222222",
           "price": "#696969",
-          "sale_price": "#f85712",
+          "sale_price": "#fb4005",
           "input_primary": "#ffffff",
           "input_secondary": "#878787"
         }
@@ -170,11 +170,11 @@
           "background": "#ffffff",
           "background_gradient": "",
           "background2": "#f5f5f5",
-          "button": "#f92c2c",
+          "button": "#6e8756",
           "button_label": "#ffffff",
-          "button_border": "#f92c2c",
+          "button_border": "#6e8756",
           "secondary_button_label": "#222222",
-          "accent_color": "#f7f7f7",
+          "accent_color": "#222222",
           "line_border": "#eeeeee",
           "overlay": "#000000",
           "pr_text": "#000000",
@@ -195,7 +195,7 @@
           "button_label": "#222222",
           "button_border": "#999999",
           "secondary_button_label": "#222222",
-          "accent_color": "#f92c2c",
+          "accent_color": "#56cfe1",
           "line_border": "#dddddd",
           "overlay": "#000000",
           "pr_text": "#222222",
@@ -228,39 +228,18 @@
       },
       "scheme-6707cc8e-6558-49d9-8759-f7d934d9fe4f": {
         "settings": {
-          "text": "#ffffff",
-          "text2": "#ffffff",
-          "background": "#f92c2c",
+          "text": "#222222",
+          "text2": "#696969",
+          "background": "#e91e63",
           "background_gradient": "",
           "background2": "#f2f2f2",
-          "button": "#f92c2c",
-          "button_label": "#ffffff",
-          "button_border": "#f92c2c",
+          "button": "#ffffff",
+          "button_label": "#222222",
+          "button_border": "#ffffff",
           "secondary_button_label": "#ffffff",
           "accent_color": "#56cfe1",
           "line_border": "#dddddd",
-          "overlay": "#000000",
-          "pr_text": "#222222",
-          "price": "#696969",
-          "sale_price": "#f85712",
-          "input_primary": "#ffffff",
-          "input_secondary": "#686868"
-        }
-      },
-      "scheme-c9476b69-abc7-454f-a946-2d5a9f5f3a37": {
-        "settings": {
-          "text": "#222222",
-          "text2": "#878787",
-          "background": "#f6f6f8",
-          "background_gradient": "",
-          "background2": "#f2f2f2",
-          "button": "#222222",
-          "button_label": "#ffffff",
-          "button_border": "#222222",
-          "secondary_button_label": "#222222",
-          "accent_color": "#f92c2c",
-          "line_border": "#e6e6e6",
-          "overlay": "#000000",
+          "overlay": "#ffffff",
           "pr_text": "#222222",
           "price": "#696969",
           "sale_price": "#ec0101",
@@ -268,23 +247,23 @@
           "input_secondary": "#686868"
         }
       },
-      "scheme-e3f1de66-f6b9-4361-912a-5b889df6a754": {
+      "scheme-c9476b69-abc7-454f-a946-2d5a9f5f3a37": {
         "settings": {
           "text": "#222222",
-          "text2": "#ffffff",
-          "background": "#ffffff",
+          "text2": "#696969",
+          "background": "#f3f8ef",
           "background_gradient": "",
           "background2": "#f2f2f2",
-          "button": "#f92c2c",
+          "button": "#222222",
           "button_label": "#ffffff",
-          "button_border": "#f92c2c",
-          "secondary_button_label": "#878787",
-          "accent_color": "#56cfe1",
-          "line_border": "#dddddd",
+          "button_border": "#222222",
+          "secondary_button_label": "#696969",
+          "accent_color": "#485838",
+          "line_border": "#222222",
           "overlay": "#000000",
           "pr_text": "#222222",
           "price": "#696969",
-          "sale_price": "#f92c2c",
+          "sale_price": "#ec0101",
           "input_primary": "#ffffff",
           "input_secondary": "#878787"
         }
@@ -293,9 +272,9 @@
   },
   "platform_customizations": {
     "custom_css": [
-      ":is(.hdt-pr-style2, .hdt-pr-style3, .hdt-pr-style4, .hdt-pr-style5) {--atc-cl: rgb(var(--hdt-btn-bg)); --atc-bg-cl: rgb(var(--hdt-btn-color));}",
-      ".hdt-badge__shape-round .hdt-badge {border-radius: 2px; font-weight: 400;}",
-      "@media (767px < width < 1366px) {footer > div > div {padding: 50px 15px; }}"
+      ".hdt-card-product hdt-wishlist:not([action=\"add\"]) svg {color: rgb(236, 35, 97);}",
+      ".hdt-badge.hdt-badge__on-sale {background-color: #f54e05;}",
+      ".hdt-badge{font-size: 12px !important; font-weight: 400 !important;}"
     ]
   }
 }
