--- a/Home Bakery/config/settings_data.json
+++ b/Home Bakery/config/settings_data.json
@@ -14,7 +14,7 @@
     "font_family_shopify_1": "poppins_n4",
     "font_family_shopify_2": "poppins_n4",
     "font_family_shopify_3": "libre_baskerville_n4",
-    "embed_google_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap\" rel=\"stylesheet\">",
+    "embed_google_font": "<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">\n<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap\" rel=\"stylesheet\">",
     "rules_google_font": "font-family: \"Poppins\", sans-serif;\nfont-family: \"Playfair Display\", sans-serif;\nfont-family: \"Poppins\", serif;",
     "font_custom_heading": "--f_family_2",
     "hd_fweight": 600,
@@ -85,16 +85,16 @@
     "hidden_compare": false,
     "pick_mode": "first_available",
     "hide_sold_out": false,
-    "empty_cart_link": "shopify:\/\/collections",
+    "empty_cart_link": "shopify://collections",
     "free_ship_pr": "ashlie-crossbody-bag",
     "gift_wrap_pr": "gift-card",
     "animations_reveal_on_scroll": true,
-    "social_facebook_link": "https:\/\/facebook.com\/shopify",
-    "social_x_link": "https:\/\/x.com\/shopify",
-    "social_instagram_link": "http:\/\/instagram.com\/shopify",
-    "social_youtube_link": "https:\/\/www.youtube.com\/shopify",
+    "social_facebook_link": "https://facebook.com/shopify",
+    "social_x_link": "https://x.com/shopify",
+    "social_instagram_link": "http://instagram.com/shopify",
+    "social_youtube_link": "https://www.youtube.com/shopify",
     "social_tiktok_link": "",
-    "social_pinterest_link": "https:\/\/pinterest.com\/shopify",
+    "social_pinterest_link": "https://pinterest.com/shopify",
     "social_tumblr_link": "",
     "social_vimeo_link": "",
     "social_snapchat_link": "",
@@ -114,14 +114,14 @@
     "currency_code_enabled": false,
     "flag_currency": true,
     "round_currency": true,
-    "favicon": "shopify:\/\/shop_images\/k-fav.jpg",
+    "favicon": "shopify://shop_images/k-fav.jpg",
     "color_style": "style-2",
-    "pr_price_size": 14,
+    "pr_price_size": "base",
     "animations_hover_elements": "none",
     "color_loading_bar": "#56cfe1",
     "type_header_font": "poppins_n4",
     "type_body_font": "poppins_n4",
-    "embed_custom_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin>\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap\" rel=\"stylesheet\">",
+    "embed_custom_font": "<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin>\n<link href=\"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap\" rel=\"stylesheet\">",
     "font_custom_body": "Poppins",
     "padding_btn_2": 45,
     "min_height_btn_2": 50,
@@ -216,7 +216,7 @@
     "sale_badge_color_scheme": "accent-2",
     "sold_out_badge_color_scheme": "inverse",
     "brand_headline": "",
-    "brand_description": "<p><\/p>",
+    "brand_description": "<p></p>",
     "brand_image_width": 100,
     "cart_type": "notification",
     "show_vendor": false,
@@ -438,7 +438,8 @@
   },
   "platform_customizations": {
     "custom_css": [
-      ".dir--rtl .hdt-quote-content p {text-align: center !important;}"
+      ".dir--rtl .hdt-quote-content p {text-align: center !important;}",
+      ".hdt-badge {font-weight: var(--font-normal) !important;}"
     ]
   }
 }
