--- a/Home Fashion 15/config/settings_data.json
+++ b/Home Fashion 15/config/settings_data.json
@@ -1,4 +1,13 @@
-{
+/*
+ * ------------------------------------------------------------
+ * IMPORTANT: The contents of this file are auto-generated.
+ *
+ * This file may be updated by the Shopify admin theme editor
+ * or related systems. Please exercise caution as any changes
+ * made to this file may be overwritten.
+ * ------------------------------------------------------------
+ */
+ {
   "current": {
     "color_scheme_body": "scheme-1",
     "color_focus": "#56cfe1",
@@ -9,11 +18,15 @@
     "badge_preorder": "#0774d7",
     "badge_custom": "#00a500",
     "tooltip_bg": "#383838",
-    "library_font": "shopify",
+    "library_font": "google",
     "font_family_shopify_1": "poppins_n4",
     "font_family_shopify_2": "poppins_n4",
     "font_family_shopify_3": "libre_baskerville_n4",
-    "rules_google_font": "font-family: \"Poppins\", sans-serif;\nfont-family: \"Poppins\", sans-serif;\nfont-family: \"Libre Baskerville\", serif;",
+    "embed_google_font": "<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">",
+    "rules_google_font": "",
+    "font_family_1": "\"Poppins\", sans-serif;",
+    "font_family_2": "\"Inter\", sans-serif;",
+    "font_family_3": "\"Poppins\", sans-serif;",
     "font_custom_heading": "--f_family_1",
     "hd_fweight": 500,
     "heading_scale": 100,
@@ -42,7 +55,7 @@
     "spacing_grid_horizontal": 30,
     "spacing_grid_vertical": 40,
     "button_radius": 30,
-    "input_radius": 0,
+    "input_radius": 30,
     "block_radius": 0,
     "pr_card_radius": 0,
     "pr_media_radius": 0,
@@ -52,6 +65,7 @@
     "badge_shape": "circle",
     "label_onsale_style": "percentage",
     "wis_atc_added": "2",
+    "enable_compare_popup": true,
     "use_url_collection_vendor": true,
     "use_url_collection_type": true,
     "effect_secondary_image": "opacity",
@@ -59,6 +73,8 @@
     "show_qty": true,
     "pr_card_alignment": "center",
     "show_rating": false,
+    "pr_title_font_family": "--f_family_2",
+    "pr_title_size": "lg",
     "pr_title_weight": "medium",
     "pr_price_weight": "normal",
     "color_mode": "color",
@@ -78,23 +94,23 @@
     "hidden_compare": false,
     "pick_mode": "first_available",
     "hide_sold_out": false,
-    "empty_cart_link": "shopify:\/\/collections",
+    "empty_cart_link": "shopify://collections",
     "free_ship_pr": "white-cream-sleeve",
     "gift_wrap_pr": "gift-wrap",
     "animations_reveal_on_scroll": true,
-    "social_facebook_link": "https:\/\/facebook.com\/shopify",
-    "social_x_link": "https:\/\/x.com\/shopify",
-    "social_instagram_link": "http:\/\/instagram.com\/shopify",
-    "social_youtube_link": "https:\/\/www.youtube.com\/shopify",
+    "social_facebook_link": "https://facebook.com/shopify",
+    "social_x_link": "https://x.com/shopify",
+    "social_instagram_link": "http://instagram.com/shopify",
+    "social_youtube_link": "https://www.youtube.com/shopify",
     "social_tiktok_link": "",
-    "social_pinterest_link": "https:\/\/pinterest.com\/shopify",
+    "social_pinterest_link": "https://pinterest.com/shopify",
     "social_tumblr_link": "",
     "social_vimeo_link": "",
     "social_snapchat_link": "",
     "predictive_search_enabled": true,
     "predictive_search_show_vendor": true,
     "predictive_search_show_price": true,
-    "search_fullwidth": true,
+    "search_fullwidth": false,
     "products_suggest": [
       "crop-top-t-shirt",
       "denim-shell-top-with-ruffle-front",
@@ -104,17 +120,17 @@
       "short-sleeved-hoodie"
     ],
     "currency_type": "1",
-    "currency_code_enabled": true,
+    "currency_code_enabled": false,
     "flag_currency": true,
     "round_currency": true,
-    "favicon": "shopify:\/\/shop_images\/k-fav.jpg",
+    "favicon": "shopify://shop_images/k-fav.jpg",
     "color_style": "style-2",
-    "pr_price_size": "base",
+    "pr_price_size": 14,
     "animations_hover_elements": "none",
     "color_loading_bar": "#56cfe1",
     "type_header_font": "poppins_n4",
     "type_body_font": "poppins_n4",
-    "embed_custom_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin>\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap\" rel=\"stylesheet\">",
+    "embed_custom_font": "<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin>\n<link href=\"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap\" rel=\"stylesheet\">",
     "font_custom_body": "Poppins",
     "padding_btn_2": 45,
     "min_height_btn_2": 50,
@@ -209,7 +225,7 @@
     "sale_badge_color_scheme": "accent-2",
     "sold_out_badge_color_scheme": "inverse",
     "brand_headline": "",
-    "brand_description": "<p><\/p>",
+    "brand_description": "<p></p>",
     "brand_image_width": 100,
     "cart_type": "notification",
     "show_vendor": false,
@@ -345,7 +361,7 @@
       },
       "scheme-c9476b69-abc7-454f-a946-2d5a9f5f3a37": {
         "settings": {
-          "text": "#878787",
+          "text": "#222222",
           "text2": "#878787",
           "background": "#f7fafa",
           "background_gradient": "",
@@ -410,7 +426,8 @@
   },
   "platform_customizations": {
     "custom_css": [
-      "@media (min-width: 1150px) {.hdt-card-product__title {--pr-title-size: 16px; }}"
+      "@media (min-width: 1150px) {.hdt-card-product__title {--pr-title-size: 16px; }}",
+      ".hdt-menu-item:nth-child(4),.hdt-menu-item:nth-child(8),#hdt-nav-ul .hdt-menu-item:nth-child(2) > .hdt_label_menu {display: none;}"
     ]
   }
 }
