--- a/Home Handmade 02/config/settings_data.json
+++ b/Home Handmade 02/config/settings_data.json
@@ -14,7 +14,7 @@
     "font_family_shopify_1": "poppins_n4",
     "font_family_shopify_2": "poppins_n4",
     "font_family_shopify_3": "libre_baskerville_n4",
-    "embed_google_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">\n\n<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">",
+    "embed_google_font": "<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">\n\n<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">",
     "rules_google_font": "font-family: \"Poppins\", sans-serif;\nfont-family: \"Inter\", sans-serif;\nfont-family: \"Poppins\", serif;",
     "font_custom_heading": "--f_family_1",
     "hd_fweight": 600,
@@ -42,6 +42,7 @@
     "min_height_btn_1": 25,
     "page_width": 1640,
     "spacing_sections": 0,
+    "footer_sticky": true,
     "spacing_grid_horizontal": 30,
     "spacing_grid_vertical": 30,
     "button_radius": 0,
@@ -84,16 +85,16 @@
     "hidden_compare": true,
     "pick_mode": "first_available",
     "hide_sold_out": false,
-    "empty_cart_link": "shopify:\/\/collections",
+    "empty_cart_link": "shopify://collections",
     "free_ship_pr": "anadaman-cookies",
     "gift_wrap_pr": "gift-card",
     "animations_reveal_on_scroll": true,
-    "social_facebook_link": "https:\/\/facebook.com\/shopify",
-    "social_x_link": "https:\/\/x.com\/shopify",
-    "social_instagram_link": "http:\/\/instagram.com\/shopify",
-    "social_youtube_link": "https:\/\/www.youtube.com\/shopify",
+    "social_facebook_link": "https://facebook.com/shopify",
+    "social_x_link": "https://x.com/shopify",
+    "social_instagram_link": "http://instagram.com/shopify",
+    "social_youtube_link": "https://www.youtube.com/shopify",
     "social_tiktok_link": "",
-    "social_pinterest_link": "https:\/\/pinterest.com\/shopify",
+    "social_pinterest_link": "https://pinterest.com/shopify",
     "social_tumblr_link": "",
     "social_vimeo_link": "",
     "social_snapchat_link": "",
@@ -110,14 +111,13 @@
     "currency_code_enabled": false,
     "flag_currency": true,
     "round_currency": true,
-    "favicon": "shopify:\/\/shop_images\/k-fav.jpg",
+    "favicon": "shopify://shop_images/k-fav.jpg",
     "color_style": "style-2",
-    "pr_price_size": "base",
     "animations_hover_elements": "none",
     "color_loading_bar": "#56cfe1",
     "type_header_font": "poppins_n4",
     "type_body_font": "poppins_n4",
-    "embed_custom_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin>\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap\" rel=\"stylesheet\">",
+    "embed_custom_font": "<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin>\n<link href=\"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap\" rel=\"stylesheet\">",
     "font_custom_body": "Poppins",
     "padding_btn_2": 45,
     "min_height_btn_2": 50,
@@ -212,7 +212,7 @@
     "sale_badge_color_scheme": "accent-2",
     "sold_out_badge_color_scheme": "inverse",
     "brand_headline": "",
-    "brand_description": "<p><\/p>",
+    "brand_description": "<p></p>",
     "brand_image_width": 100,
     "cart_type": "notification",
     "show_vendor": false,
@@ -269,9 +269,9 @@
           "background": "#ffffff",
           "background_gradient": "",
           "background2": "#f5f5f5",
-          "button": "#56cfe1",
+          "button": "#b26b53",
           "button_label": "#ffffff",
-          "button_border": "#56cfe1",
+          "button_border": "#b26b53",
           "secondary_button_label": "#222222",
           "accent_color": "#222222",
           "line_border": "#eeeeee",
@@ -370,7 +370,7 @@
       "scheme-c4e30b13-8ad7-42f6-9c53-efa179aa46de": {
         "settings": {
           "text": "#b26b53",
-          "text2": "#878787",
+          "text2": "#d6957f",
           "background": "#ffffff",
           "background_gradient": "",
           "background2": "#f2f2f2",
@@ -421,6 +421,27 @@
           "button_border": "#222222",
           "secondary_button_label": "#222222",
           "accent_color": "#56cfe1",
+          "line_border": "#dddddd",
+          "overlay": "#000000",
+          "pr_text": "#222222",
+          "price": "#696969",
+          "sale_price": "#ec0101",
+          "input_primary": "#ffffff",
+          "input_secondary": "#686868"
+        }
+      },
+      "scheme-9e2cc102-90c2-4a1b-a0d3-f49d7a694d9a": {
+        "settings": {
+          "text": "#b26b53",
+          "text2": "#878787",
+          "background": "#ffffff",
+          "background_gradient": "",
+          "background2": "#f2f2f2",
+          "button": "#b26b53",
+          "button_label": "#ffffff",
+          "button_border": "#b26b53",
+          "secondary_button_label": "#222222",
+          "accent_color": "#893e24",
           "line_border": "#dddddd",
           "overlay": "#000000",
           "pr_text": "#222222",
