--- a/Home Multi Brand/config/settings_data.json
+++ b/Home Multi Brand/config/settings_data.json
@@ -1,5 +1,6 @@
 {
   "current": {
+    "purchase_code": "kalles-5",
     "color_scheme_body": "scheme-1",
     "color_focus": "#56cfe1",
     "color_scheme_dialog": "scheme-1",
@@ -13,11 +14,8 @@
     "font_family_shopify_1": "poppins_n4",
     "font_family_shopify_2": "poppins_n4",
     "font_family_shopify_3": "libre_baskerville_n4",
-    "embed_google_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&amp;family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">",
-    "rules_google_font": "",
-    "font_family_1": "\"Poppins\", sans-serif;",
-    "font_family_2": "\"Poppins\", sans-serif;",
-    "font_family_3": "\"Libre Baskerville\", serif;",
+    "embed_google_font": "<link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">",
+    "rules_google_font": "font-family: \"Poppins\", sans-serif;\nfont-family: \"Poppins\", sans-serif;\nfont-family: \"Poppins\", sans-serif;",
     "font_custom_heading": "--f_family_1",
     "hd_fweight": 500,
     "heading_scale": 100,
@@ -56,7 +54,6 @@
     "collection_card_radius": 0,
     "blog_card_radius": 0,
     "price_varies_style": "1",
-    "scroll_badge_icon": "",
     "badge_shape": "round",
     "label_onsale_style": "percentage",
     "use_new_badge": false,
@@ -65,6 +62,7 @@
     "use_url_collection_vendor": true,
     "use_url_collection_type": true,
     "effect_secondary_image": "opacity",
+    "scroll_badge_icon": "",
     "show_quick_add": true,
     "show_qty": false,
     "pr_card_alignment": "center",
@@ -89,16 +87,16 @@
     "hidden_compare": true,
     "pick_mode": "first_available",
     "hide_sold_out": false,
-    "empty_cart_link": "shopify:\/\/collections",
+    "empty_cart_link": "shopify://collections",
     "free_ship_pr": "white-cream-sleeve",
     "gift_wrap_pr": "gift-wrap",
     "animations_reveal_on_scroll": true,
-    "social_facebook_link": "https:\/\/facebook.com\/shopify",
-    "social_x_link": "https:\/\/x.com\/shopify",
-    "social_instagram_link": "http:\/\/instagram.com\/shopify",
-    "social_youtube_link": "https:\/\/www.youtube.com\/shopify",
+    "social_facebook_link": "https://facebook.com/shopify",
+    "social_x_link": "https://x.com/shopify",
+    "social_instagram_link": "http://instagram.com/shopify",
+    "social_youtube_link": "https://www.youtube.com/shopify",
     "social_tiktok_link": "",
-    "social_pinterest_link": "https:\/\/pinterest.com\/shopify",
+    "social_pinterest_link": "https://pinterest.com/shopify",
     "social_tumblr_link": "",
     "social_vimeo_link": "",
     "social_snapchat_link": "",
@@ -107,24 +105,21 @@
     "predictive_search_show_price": true,
     "search_fullwidth": false,
     "products_suggest": [
+      "knit-shorts-lounge-set",
+      "blue-varish-hat",
+      "black-shouder-dress"
     ],
     "currency_type": "1",
     "currency_code_enabled": false,
     "flag_currency": true,
     "round_currency": true,
-    "favicon": "shopify:\/\/shop_images\/k-fav.jpg",
-    "color_style": "style-2",
-    "pr_price_size": "base",
-    "animations_hover_elements": "none",
+    "favicon": "shopify://shop_images/k-fav.jpg",
     "sections": {
       "main-gift-cart": {
         "type": "main-gift-cart",
         "settings": {
           "logo_width": 100,
-          "color_scheme": "",
-          "padding_top": 60,
-          "padding_bottom": 34,
-          "padding_rate": 70
+          "color_scheme": ""
         }
       }
     },
@@ -183,7 +178,7 @@
           "button_label": "#ffffff",
           "button_border": "#56cfe1",
           "secondary_button_label": "#222222",
-          "accent_color": "#222222",
+          "accent_color": "#56cfe1",
           "line_border": "#eeeeee",
           "overlay": "#000000",
           "pr_text": "#000000",
