--- a/Home Barber/config/settings_data.json
+++ b/Home Barber/config/settings_data.json
@@ -4,7 +4,7 @@
     "color_scheme_body": "scheme-1",
     "color_focus": "#56cfe1",
     "color_scheme_dialog": "scheme-1",
-    "badge_sale": "#d4553a",
+    "badge_sale": "#f8a802",
     "badge_new": "#56cfe1",
     "badge_soldout": "#999999",
     "badge_preorder": "#0774d7",
@@ -14,12 +14,15 @@
     "font_family_shopify_1": "poppins_n4",
     "font_family_shopify_2": "poppins_n4",
     "font_family_shopify_3": "libre_baskerville_n4",
-    "embed_google_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap\" rel=\"stylesheet\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&amp;display=swap\" rel=\"stylesheet\">",
-    "rules_google_font": "font-family: \"Poppins\", sans-serif;\nfont-family: \"Playfair Display\", sans-serif;\nfont-family: \"Poppins\", serif;",
-    "font_custom_heading": "--f_family_2",
+    "embed_google_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Oswald:wght@200..700&amp;family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap\" rel=\"stylesheet\">",
+    "rules_google_font": "",
+    "font_family_1": "Poppins",
+    "font_family_2": "Oswald",
+    "font_family_3": "Rubik",
+    "font_custom_heading": "--f_family_3",
     "hd_fweight": 600,
     "heading_scale": 100,
-    "heading_lh": 1.4,
+    "heading_lh": 1.5,
     "heading_spacing": 0,
     "font_custom_sheading": "--f_family_1",
     "font_base": "--f_family_1",
@@ -43,7 +46,7 @@
     "page_width": 1200,
     "spacing_sections": 0,
     "spacing_grid_horizontal": 30,
-    "spacing_grid_vertical": 30,
+    "spacing_grid_vertical": 36,
     "button_radius": 0,
     "input_radius": 0,
     "block_radius": 0,
@@ -53,7 +56,7 @@
     "blog_card_radius": 0,
     "price_varies_style": "1",
     "badge_shape": "rectangle",
-    "label_onsale_style": "percentage",
+    "label_onsale_style": "text",
     "use_new_badge": false,
     "wis_atc_added": "2",
     "enable_compare_popup": true,
@@ -64,9 +67,7 @@
     "show_qty": false,
     "pr_card_alignment": "center",
     "show_rating": false,
-    "pr_title_font_family": "--f_family_2",
-    "pr_title_size": "lg",
-    "pr_title_weight": "semibold",
+    "pr_title_weight": "medium",
     "pr_price_weight": "medium",
     "color_mode": "color",
     "color_type": "all",
@@ -81,12 +82,14 @@
     "remove_collection_url": false,
     "minimal_products": false,
     "hidden_badges": false,
-    "hidden_wishlist": false,
-    "hidden_compare": false,
+    "hidden_wishlist": true,
+    "hidden_compare": true,
     "pick_mode": "first_available",
     "hide_sold_out": false,
     "empty_cart_link": "shopify:\/\/collections",
-    "free_ship_pr": "ashlie-crossbody-bag",
+    "free_ship_pr": "elise-top-handle-bag",
+    "free_ship_pr_fast": "asley-shoulder-bag",
+    "free_ship_pr_express": "copy-of-vases-and-confetti",
     "gift_wrap_pr": "gift-card",
     "animations_reveal_on_scroll": true,
     "social_facebook_link": "https:\/\/facebook.com\/shopify",
@@ -99,129 +102,21 @@
     "social_vimeo_link": "",
     "social_snapchat_link": "",
     "predictive_search_enabled": true,
-    "predictive_search_show_vendor": true,
+    "predictive_search_show_vendor": false,
     "predictive_search_show_price": true,
-    "search_fullwidth": true,
+    "search_fullwidth": false,
     "products_suggest": [
-      "anadaman-cookies",
-      "cereal-bagel",
-      "chocolate-cookies",
-      "double-choco-cookie",
-      "pane-di-altamura",
-      "pistachio-financiers"
+      "kit-pepper-mill",
+      "menu-bottle-grinders-ash-carbon",
+      "shop-kitchen-serveware",
+      "tea-tree-shower-gel",
+      "spa-volcano-bath-1"
     ],
     "currency_type": "1",
     "currency_code_enabled": false,
     "flag_currency": true,
     "round_currency": true,
     "favicon": "shopify:\/\/shop_images\/k-fav.jpg",
-    "color_style": "style-2",
-    "pr_price_size": 14,
-    "animations_hover_elements": "none",
-    "color_loading_bar": "#56cfe1",
-    "type_header_font": "poppins_n4",
-    "type_body_font": "poppins_n4",
-    "embed_custom_font": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin>\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap\" rel=\"stylesheet\">",
-    "font_custom_body": "Poppins",
-    "padding_btn_2": 45,
-    "min_height_btn_2": 50,
-    "min_width_btn_2": 160,
-    "min_width_dt_btn_2": 120,
-    "font_size_btn_2": 14,
-    "body_scale": 100,
-    "logo_width": 90,
-    "buttons_border_thickness": 1,
-    "buttons_border_opacity": 100,
-    "buttons_radius": 0,
-    "buttons_shadow_opacity": 0,
-    "buttons_shadow_horizontal_offset": 0,
-    "buttons_shadow_vertical_offset": 4,
-    "buttons_shadow_blur": 5,
-    "variant_pills_border_thickness": 1,
-    "variant_pills_border_opacity": 55,
-    "variant_pills_radius": 40,
-    "variant_pills_shadow_opacity": 0,
-    "variant_pills_shadow_horizontal_offset": 0,
-    "variant_pills_shadow_vertical_offset": 4,
-    "variant_pills_shadow_blur": 5,
-    "inputs_border_thickness": 1,
-    "inputs_border_opacity": 55,
-    "inputs_radius": 0,
-    "inputs_shadow_opacity": 0,
-    "inputs_shadow_horizontal_offset": 0,
-    "inputs_shadow_vertical_offset": 4,
-    "inputs_shadow_blur": 5,
-    "card_style": "standard",
-    "card_image_padding": 0,
-    "card_text_alignment": "left",
-    "card_color_scheme": "background-2",
-    "card_border_thickness": 0,
-    "card_border_opacity": 10,
-    "card_corner_radius": 0,
-    "card_shadow_opacity": 0,
-    "card_shadow_horizontal_offset": 0,
-    "card_shadow_vertical_offset": 4,
-    "card_shadow_blur": 5,
-    "collection_card_style": "standard",
-    "collection_card_image_padding": 0,
-    "collection_card_text_alignment": "left",
-    "collection_card_color_scheme": "background-2",
-    "collection_card_border_thickness": 0,
-    "collection_card_border_opacity": 10,
-    "collection_card_corner_radius": 0,
-    "collection_card_shadow_opacity": 0,
-    "collection_card_shadow_horizontal_offset": 0,
-    "collection_card_shadow_vertical_offset": 4,
-    "collection_card_shadow_blur": 5,
-    "blog_card_style": "standard",
-    "blog_card_image_padding": 0,
-    "blog_card_text_alignment": "left",
-    "blog_card_color_scheme": "background-2",
-    "blog_card_border_thickness": 0,
-    "blog_card_border_opacity": 10,
-    "blog_card_corner_radius": 0,
-    "blog_card_shadow_opacity": 0,
-    "blog_card_shadow_horizontal_offset": 0,
-    "blog_card_shadow_vertical_offset": 4,
-    "blog_card_shadow_blur": 5,
-    "text_boxes_border_thickness": 0,
-    "text_boxes_border_opacity": 10,
-    "text_boxes_radius": 0,
-    "text_boxes_shadow_opacity": 0,
-    "text_boxes_shadow_horizontal_offset": 0,
-    "text_boxes_shadow_vertical_offset": 4,
-    "text_boxes_shadow_blur": 5,
-    "media_border_thickness": 1,
-    "media_border_opacity": 5,
-    "media_radius": 0,
-    "media_shadow_opacity": 0,
-    "media_shadow_horizontal_offset": 0,
-    "media_shadow_vertical_offset": 4,
-    "media_shadow_blur": 5,
-    "popup_border_thickness": 1,
-    "popup_border_opacity": 10,
-    "popup_corner_radius": 0,
-    "popup_shadow_opacity": 0,
-    "popup_shadow_horizontal_offset": 0,
-    "popup_shadow_vertical_offset": 4,
-    "popup_shadow_blur": 5,
-    "drawer_border_thickness": 1,
-    "drawer_border_opacity": 10,
-    "drawer_shadow_opacity": 0,
-    "drawer_shadow_horizontal_offset": 0,
-    "drawer_shadow_vertical_offset": 4,
-    "drawer_shadow_blur": 5,
-    "badge_position": "bottom left",
-    "badge_corner_radius": 40,
-    "sale_badge_color_scheme": "accent-2",
-    "sold_out_badge_color_scheme": "inverse",
-    "brand_headline": "",
-    "brand_description": "<p><\/p>",
-    "brand_image_width": 100,
-    "cart_type": "notification",
-    "show_vendor": false,
-    "show_cart_note": false,
-    "cart_drawer_collection": "",
     "content_for_index": [],
     "color_schemes": {
       "scheme-1": {
@@ -235,20 +130,20 @@
           "button_label": "#ffffff",
           "button_border": "#222222",
           "secondary_button_label": "#222222",
-          "accent_color": "#bb9230",
+          "accent_color": "#c59a57",
           "line_border": "#dddddd",
           "overlay": "#000000",
           "pr_text": "#222222",
           "price": "#696969",
           "sale_price": "#ec0101",
           "input_primary": "#ffffff",
-          "input_secondary": "#686868"
+          "input_secondary": "#878787"
         }
       },
       "scheme-77e4ef58-56a9-4631-876a-12098ba7d57d": {
         "settings": {
           "text": "#ffffff",
-          "text2": "#dddddd",
+          "text2": "#878787",
           "background": "#222222",
           "background_gradient": "",
           "background2": "#ffffff",
@@ -256,12 +151,12 @@
           "button_label": "#222222",
           "button_border": "#ffffff",
           "secondary_button_label": "#ffffff",
-          "accent_color": "#bb9230",
+          "accent_color": "#56cfe1",
           "line_border": "#444444",
           "overlay": "#000000",
           "pr_text": "#ffffff",
           "price": "#999999",
-          "sale_price": "#bb9230",
+          "sale_price": "#eb001b",
           "input_primary": "#ffffff",
           "input_secondary": "#686868"
         }
@@ -273,9 +168,9 @@
           "background": "#ffffff",
           "background_gradient": "",
           "background2": "#f5f5f5",
-          "button": "#56cfe1",
+          "button": "#c59a57",
           "button_label": "#ffffff",
-          "button_border": "#56cfe1",
+          "button_border": "#c59a57",
           "secondary_button_label": "#222222",
           "accent_color": "#222222",
           "line_border": "#eeeeee",
@@ -312,14 +207,14 @@
         "settings": {
           "text": "#ffffff",
           "text2": "#878787",
-          "background": "#383838",
+          "background": "#222222",
           "background_gradient": "",
           "background2": "#f2f2f2",
           "button": "#ffffff",
           "button_label": "#222222",
           "button_border": "#ffffff",
           "secondary_button_label": "#383838",
-          "accent_color": "#56cfe1",
+          "accent_color": "#c59a57",
           "line_border": "#e6e6e6",
           "overlay": "#000000",
           "pr_text": "#ffffff",
@@ -352,16 +247,16 @@
       },
       "scheme-c9476b69-abc7-454f-a946-2d5a9f5f3a37": {
         "settings": {
-          "text": "#222222",
-          "text2": "#878787",
+          "text": "#c59a57",
+          "text2": "#cccccc",
           "background": "#f6f6f8",
           "background_gradient": "",
           "background2": "#f2f2f2",
-          "button": "#222222",
+          "button": "#c59a57",
           "button_label": "#ffffff",
           "button_border": "#222222",
           "secondary_button_label": "#222222",
-          "accent_color": "#56cfe1",
+          "accent_color": "#c59a57",
           "line_border": "#e6e6e6",
           "overlay": "#000000",
           "pr_text": "#222222",
@@ -371,59 +266,59 @@
           "input_secondary": "#686868"
         }
       },
-      "scheme-0e23d939-c83e-48eb-be2a-88b7207d4511": {
-        "settings": {
-          "text": "#ffffff",
-          "text2": "#ffffff",
-          "background": "#222222",
-          "background_gradient": "",
-          "background2": "#f2f2f2",
-          "button": "#ffffff",
-          "button_label": "#ffffff",
-          "button_border": "#222222",
-          "secondary_button_label": "#ffffff",
-          "accent_color": "#bb9230",
-          "line_border": "#dddddd",
-          "overlay": "#000000",
-          "pr_text": "#222222",
-          "price": "#696969",
-          "sale_price": "#ec0101",
-          "input_primary": "#ffffff",
-          "input_secondary": "#686868"
-        }
-      },
-      "scheme-d1ad1259-8c1d-4fdf-97f7-172532123f68": {
-        "settings": {
-          "text": "#222222",
-          "text2": "#bb9230",
-          "background": "#ffffff",
-          "background_gradient": "",
-          "background2": "#f2f2f2",
-          "button": "#222222",
-          "button_label": "#ffffff",
-          "button_border": "#222222",
-          "secondary_button_label": "#222222",
-          "accent_color": "#bb9230",
-          "line_border": "#dddddd",
-          "overlay": "#000000",
-          "pr_text": "#222222",
-          "price": "#696969",
-          "sale_price": "#bb9230",
-          "input_primary": "#ffffff",
-          "input_secondary": "#686868"
-        }
-      },
-      "scheme-8ff899e6-120f-4274-a7eb-0d2798d6e813": {
+      "scheme-441fe7a0-e3b8-4190-acab-4bdf1ea1808a": {
         "settings": {
           "text": "#ffffff",
           "text2": "#878787",
           "background": "#000000",
           "background_gradient": "",
           "background2": "#f2f2f2",
-          "button": "#bb9230",
+          "button": "#c59a57",
           "button_label": "#ffffff",
-          "button_border": "#bb9230",
-          "secondary_button_label": "#ffffff",
+          "button_border": "#c59a57",
+          "secondary_button_label": "#222222",
+          "accent_color": "#805c25",
+          "line_border": "#dddddd",
+          "overlay": "#000000",
+          "pr_text": "#222222",
+          "price": "#696969",
+          "sale_price": "#ec0101",
+          "input_primary": "#ffffff",
+          "input_secondary": "#878787"
+        }
+      },
+      "scheme-e3da6fb4-2e75-46a7-98be-2c98a2859807": {
+        "settings": {
+          "text": "#222222",
+          "text2": "#878787",
+          "background": "#ffffff",
+          "background_gradient": "",
+          "background2": "#f2f2f2",
+          "button": "#c59a57",
+          "button_label": "#ffffff",
+          "button_border": "#c59a57",
+          "secondary_button_label": "#c59a57",
+          "accent_color": "#c59a57",
+          "line_border": "#dddddd",
+          "overlay": "#000000",
+          "pr_text": "#222222",
+          "price": "#696969",
+          "sale_price": "#ec0101",
+          "input_primary": "#ffffff",
+          "input_secondary": "#878787"
+        }
+      },
+      "scheme-cba607f5-aaf3-4f57-a6c7-57c6b7c346a1": {
+        "settings": {
+          "text": "#222222",
+          "text2": "#878787",
+          "background": "#f7efe1",
+          "background_gradient": "",
+          "background2": "#f2f2f2",
+          "button": "#222222",
+          "button_label": "#ffffff",
+          "button_border": "#222222",
+          "secondary_button_label": "#222222",
           "accent_color": "#56cfe1",
           "line_border": "#dddddd",
           "overlay": "#000000",
@@ -431,15 +326,20 @@
           "price": "#696969",
           "sale_price": "#ec0101",
           "input_primary": "#ffffff",
-          "input_secondary": "#686868"
+          "input_secondary": "#878787"
         }
       }
     }
   },
   "platform_customizations": {
     "custom_css": [
-      ".dir--rtl .hdt-quote-content p {text-align: center !important;}",
-      ".hdt-badge {font-weight: var(--font-normal) !important;}"
+      ".hdt-card-product hdt-wishlist:not([action=\"add\"]) svg {color: rgb(236, 35, 97);}",
+      ".hdt-badge.hdt-badge__on-sale {background-color: #f54e05;}",
+      ".hdt-variants-list {justify-content: center;}",
+      ".hdt-banner-row .hdt-g-col:not(.hdt-products-wrap) {order: 1;}",
+      ".hdt-badge {font-weight: 400;}",
+      ".hdt-badge__wrapp {font-weight: 400;}",
+      ".hdt-card-product__title {font-family: var(--font-heading-family);}"
     ]
   }
 }
